# machine-learning-zoomcamp-homework

./: 02-carprice-homework.ipynb  pyproject.toml
01-intro/: homework.ipynb
02-car-price/: 02-car-price.ipynb
03-churn-prediction/: 03-churn-prediction.ipynb
04-evaluation/: 04-evalutaion-metrics.ipynb  04-evalutaion.ipynb
workshop-fastapi/: marketing.py  ping.py  predict.py  train.py  workshop-uv-fastapi.ipynb
