[project]
name = "machine-learning-zoomcamp-homework"
version = "0.1.0"
description = "Churn Prediction"
readme = "README.md"
requires-python = ">=3.10.18, <3.11"
dependencies = [
    "fastapi>=0.120.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
